# vk-caption-ai

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.qwen/: settings.json
src/: App.vue  index.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  organizer.rs
src/components/: ManualReviewModal.vue
src/composables/: useLmstudioModels.ts  useThumbnail.ts
src/router/: index.ts
src/stores/: app.ts  organizer.ts  theme.ts
src/styles/: global.scss  variables.scss
src/views/: HomeView.vue  OrganizerImageItem.vue  OrganizerView.vue  SettingsView.vue
